# rustmysqlapi

./: .env  Cargo.toml
migrations/: 20250510133634_inital_migration.sql
src/: main.rs
src/api/: errors.rs  routes.rs
src/db/: connection.rs  models.rs  queries.rs
