[package]
name = "rust-mysql-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["mysql","runtime-async-std"] }
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["actix-web"] }